--- a/client/src/style/Period.css
+++ b/client/src/style/Period.css
@@ -7,7 +7,7 @@
 	color: rgb(64, 64, 65) !important;
 	font-size: 35px !important;
 	padding-left: 50%;
-	padding-bottom: 5%;
+	padding-bottom: 6%;
 }
 
 .cyclelegnth {
