--- a/client/src/style/ProfilePage.css
+++ b/client/src/style/ProfilePage.css
@@ -1,7 +1,8 @@
 .detail {   
     text-align: center;
     font-size: 18px;
-    padding-left: 10em;
+    padding-left: 15%;
+    margin-bottom: 25%;
 
 }
 
@@ -16,7 +17,7 @@
 
 .header {
     text-align: center;
-    padding-left: 10em;
+    padding-left: 23%;
 
 }  
 
