--- a/client/src/style/Settings.css
+++ b/client/src/style/Settings.css
@@ -20,6 +20,7 @@ margin-top: 20px;
 
 .l5 {
     margin-top: 20px;
+    margin-bottom: 15%;
 
 }
 
